--- a/index.html
+++ b/index.html
@@ -70,19 +70,23 @@
       <h2>Over ne2000</h2>
       <hr>
       <p>Van 2000 tot en met 2005 is er ieder jaar een ne2000 georganiseerd. Het outdoor netwerk evenement heeft jaren lang veel mensen bij elkaar gebracht. (... nog een beetje meer text zodat het een regeltje of 4 wordt.)</p>
-      <p>Dit jaar organiseren we een reunie (... nog een beetje text)</p>
+      <p>Dit jaar organiseren we een reunie.  Een gezellig weekendlang feestje met de sfeer van ne2000, en natuurlijk de oud-bezoekers van ne2000!
+</p>
     </div>
     <div class="row">
       <div class="col-md-4">
         <h4>Wie?</h4>
-        <p>Iedereen die ooit op ne2000 is geweest, plus één introducee. (iets meer text)</p>
+        <p>Iedereen die ooit op ne2000 is geweest, plus één introducee.</p>
+        <p>Kinderen zijn ook welkom, maar we zorgen niet voor vermaak of oppas.</p>
       </div>
       <div class="col-md-4">
         <h4>Waar?</h4>
+        <p>Huize Ulenpas, Dubbeltjesweg 10, Hoog Keppel</p>
         <p>De Ulenpas is een landhuis met een grote gezellige tuin. Er is genoeg ruimte om lekker te chillen, eten en piano te spelen. Op de eerste verdieping en de grote zolder is plaats om je luchtbedje neer te leggen. Wil je echt het vakantiegevoel? Zet dan je tentje op in de grote tuin!</p>
       </div>
       <div class="col-md-4">
         <h4>Wanneer?</h4>
+        <p>2 tot en met 5 juni, 2017</p>
         <p>Je bent welkom vanaf vrijdag vanaf een uur of 5 's middags. Het terrein en het huis moeten maandagochtend om 10 uur weer leeg en schoon zijn. Je bent welkom om het hele weekend met ons door te brengen, maar alleen een bezoekje overdag is natuurlijk ook leuk!</p>
       </div>
     </div>
@@ -103,9 +107,59 @@
       <hr>
     </div>
     <div class="row">
+            <div class="col-md-8">
+        <h4>Kan ik gratis komen feesten?</h4>
+        <p>Bijna! Omdat we de locatie moeten huren, en ook wat inkopen gaan doen vragen we een bijdrage in de kosten: 10 euro per overnachting, 10 euro voor diner en 3.50 voor ontbijt.</p>
+      </div>
       <div class="col-md-8">
         <h4>Ik wil graag zaterdagmiddag even langskomen, kost dat ook wat?</h4>
         <p>Als je niet blijft slapen mag je gezellig gratis langskomen! De koelkast is gevuld met bier en fris, het is fijn als je hier een beetje aan bijdraagt. Je mag ook zelf wat te drinken meenemen!</p>
+      </div>
+      <div class="col-md-8">
+        <h4>Mag ik zelf ook andere mensen uitnodigen?</h4>
+        <p>Als je nog andere oud-bezoekers kent mag je die zeker naar onze aanmeldpagina sturen! Helaas kunnen we lang niet iedereen zelf bereiken (niet alle email adressen van 10 jaar geleden werken nog) dus zegt het voort :)
+        </p>
+      </div>
+      <div class="col-md-8">
+        <h4>Mogen mijn kinderen ook mee?</h4>
+        <p>Kinderen zijn welkom, maar de organisatie laat ze lekker thuis (aka opa en oma) Er zijn geen voorzieningen voor (kleine) kinderen zoals kinderstoelen, traphekjes of kinderbedjes. Bovendien is er een hele grote vijver zonder hekje.</p>
+      </div>
+      <div class="col-md-8">
+        <h4>Wat nou als ik geen oppas kan regelen?</h4>
+        <p>Dan raden we je aan om op zaterdag of zondag overdag te komen. Bij genoeg aanmeldingen zorgen wij voor een springkussen!</p>
+      </div>
+      <div class="col-md-8">
+        <h4>Mag ik met een caravan komen?</h4>
+        <p>Nee. Het terrein is geen camping, maar echt een tuin. Door hier met auto’s of caravans op te gaan rijden wordt het gras teveel beschadigd.</p>
+      </div>
+      <div class="col-md-8">
+        <h4>Waar kan ik parkeren?</h4>
+        <p>Er is beperkt ruimte rond de Ulenpas. We zijn nog aan het kijken naar een goede plek voor alle auto’s.
+        </p>
+      </div>
+      <div class="col-md-8">
+        <h4>Wat is er allemaal te doen?</h4>
+        <p>Omdat het maar een weekendfeestje is gaan we geen grote dingen organiseren. Je bent natuurlijk vrij om een bootje te maken voor in de vijver, of om een toneelstukje op te voeren :) Er is een woonkamer, een eetkamer, een film/game kamer, een grote overdekte verranda, een kampvuurtje. Wij zorgen voor wifi en een piano.</p>
+      </div>
+       <div class="col-md-8">
+        <h4>Wat is er allemaal te eten?</h4>
+        <p>We zullen 3 avonden en 3 ochtenden voor diner en ontbijt zorgen. Het diner zal iets zijn in de trant van broodje pulled pork en friet, barbecue, chinees of pizza. Het ontbijt zal erg uitgebreid zijn met warme broodjes, zoet en hartig beleg, koffie, thee, jus, melk, chocomel en een eitje. Verder zullen er snacks te koop zijn zoals gevulde koeken, mars, twix etc, appels en tosti’s.</p>
+      </div>
+       <div class="col-md-8">
+        <h4>Mag ik ook zelf voor mn eten zorgen?</h4>
+        <p>Ja dat mag. Er is een keuken met alles erop en eraan.</p>
+      </div>
+       <div class="col-md-8">
+        <h4>Is er ook merchandise?</h4>
+        <p>Ja! Je kunt een Dopper bestellen met het ne2000 reunie logo. De doppers kosten 10 euro per stuk. De doppers kunnen alleen per 30 besteld worden, dus de deal gaat pas door bij voldoende bestellingen. Indien je al betaald hebt en de deal gaat niet door krijg je je geld terug.</p>
+      </div>
+       <div class="col-md-8">
+        <h4>Wanneer moet ik betalen?</h4>
+        <p>Zo snel mogelijk na je aanmelding is fijn, maar uiterlijk 2 weken voor het feestje. Dit voornamelijk omdat we inkopen moeten doen en de doppers op tijd moeten bestellen.</p>
+      </div>
+       <div class="col-md-8">
+        <h4>Waar moet mijn geld naartoe?</h4>
+        <p>Nadat je je hebt aangemeld via het formulier krijg je van ons een bevestigingsmail, en daarna een betaalverzoek per mail. Je kunt dan makkelijk betalen via ideal.</p>
       </div>
     </div>
   </div>
@@ -120,7 +174,7 @@
     </div>
     <div class="row">
       <div class="col-md-8">
-        <p>Neem contact met ons op via een van de volgende opties:</p>
+        <p>Heb je nog vragen of suggesties? Neem contact met ons op via een van de volgende opties:</p>
       </div>
     </div>
     <div class="social">
