facebook url and micro cleanups

--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
       <h2>Over ne2000</h2>
       <hr>
       <p>Van 2000 tot en met 2005 is er ieder jaar een ne2000 georganiseerd. Het outdoor netwerk evenement heeft jaren lang veel mensen bij elkaar gebracht. (... nog een beetje meer text zodat het een regeltje of 4 wordt.)</p>
-      <p>Dit jaar organiseren we een reunie.  Een gezellig weekendlang feestje met de sfeer van ne2000, en natuurlijk de oud-bezoekers van ne2000!
-</p>
+      <p>Dit jaar organiseren we een reunie.  Een gezellig weekendlang feestje met de sfeer van ne2000, en natuurlijk de oud-bezoekers van ne2000!</p>
     </div>
     <div class="row">
       <div class="col-md-4">
@@ -134,8 +133,7 @@
       </div>
       <div class="col-md-8">
         <h4>Waar kan ik parkeren?</h4>
-        <p>Er is beperkt ruimte rond de Ulenpas. We zijn nog aan het kijken naar een goede plek voor alle auto’s.
-        </p>
+        <p>Er is beperkt ruimte rond de Ulenpas. We zijn nog aan het kijken naar een goede plek voor alle auto’s.</p>
       </div>
       <div class="col-md-8">
         <h4>Wat is er allemaal te doen?</h4>
@@ -180,7 +178,7 @@
     <div class="social">
       <ul>
         <li><a href="mailto:joffrey@ne2000.nl"><i class="fa fa-envelope"></i></a></li>
-        <li><a href="https://www.facebook.com/groups/289196277765250/"><i class="fa fa-facebook"></i></a></li>
+        <li><a href="https://www.facebook.com/ne2000reunie/"><i class="fa fa-facebook"></i></a></li>
         <li><a href="https://www.linkedin.com/groups/142117"><i class="fa fa-linkedin"></i></a></li>
 <!--
         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
