--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
     <div class="section-title">
       <h2>Over ne2000</h2>
       <hr>
-      <p>Van 2000 tot en met 2005 is er ieder jaar een ne2000 georganiseerd. Het outdoor netwerk evenement heeft jaren lang veel mensen bij elkaar gebracht. (... nog een beetje meer text zodat het een regeltje of 4 wordt.)</p>
+      <p>Van 2000 tot en met 2005 is er ieder jaar een ne2000 georganiseerd. Het outdoor netwerk evenement heeft jaren lang veel mensen bij elkaar gebracht.</p>
       <p>Dit jaar organiseren we een reunie.  Een gezellig weekendlang feestje met de sfeer van ne2000, en natuurlijk de oud-bezoekers van ne2000!</p>
     </div>
     <div class="row">
       <div class="col-md-4">
         <h4>Wie?</h4>
         <p>Iedereen die ooit op ne2000 is geweest, plus één introducee.</p>
-        <p>Kinderen zijn ook welkom, maar we zorgen niet voor vermaak of oppas.</p>
+        <p>Kinderen mogen mee, maar we zorgen niet voor vermaak of oppas.</p>
       </div>
       <div class="col-md-4">
         <h4>Waar?</h4>
@@ -108,11 +108,11 @@
     <div class="row">
             <div class="col-md-8">
         <h4>Kan ik gratis komen feesten?</h4>
-        <p>Bijna! Omdat we de locatie moeten huren, en ook wat inkopen gaan doen vragen we een bijdrage in de kosten: 10 euro per overnachting, 10 euro voor diner en 3.50 voor ontbijt.</p>
+        <p>Bijna! Omdat we de locatie moeten huren en ook wat inkopen gaan doen vragen we een bijdrage in de kosten: 10 euro per overnachting, 10 euro voor diner en 3.50 voor ontbijt.</p>
       </div>
       <div class="col-md-8">
         <h4>Ik wil graag zaterdagmiddag even langskomen, kost dat ook wat?</h4>
-        <p>Als je niet blijft slapen mag je gezellig gratis langskomen! De koelkast is gevuld met bier en fris, het is fijn als je hier een beetje aan bijdraagt. Je mag ook zelf wat te drinken meenemen!</p>
+        <p>Als je niet blijft slapen mag je gezellig gratis langskomen. De koelkast is gevuld met bier en fris, het is fijn als je hier een beetje aan bijdraagt. Je mag ook zelf wat te drinken meenemen!</p>
       </div>
       <div class="col-md-8">
         <h4>Mag ik zelf ook andere mensen uitnodigen?</h4>
@@ -121,7 +121,7 @@
       </div>
       <div class="col-md-8">
         <h4>Mogen mijn kinderen ook mee?</h4>
-        <p>Kinderen zijn welkom, maar de organisatie laat ze lekker thuis (aka opa en oma) Er zijn geen voorzieningen voor (kleine) kinderen zoals kinderstoelen, traphekjes of kinderbedjes. Bovendien is er een hele grote vijver zonder hekje.</p>
+        <p>Kinderen mogen mee, maar de organisatie laat ze lekker thuis (aka opa en oma) Er zijn geen voorzieningen voor (kleine) kinderen zoals kinderstoelen, traphekjes of kinderbedjes. Bovendien is er een hele grote vijver zonder hekje.</p>
       </div>
       <div class="col-md-8">
         <h4>Wat nou als ik geen oppas kan regelen?</h4>
