added favicons, removed old images, convert newlines, updated texts

--- a/index.html
+++ b/index.html
@@ -8,10 +8,23 @@
 <meta name="author" content="Joffrey van Wageningen <joffrey@ne2000.nl>">
 
 <!-- Favicons -->
-<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
-<link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="57x57" href="/img/favicon/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/img/favicon/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/img/favicon/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/img/favicon/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/img/favicon/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/img/favicon/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/img/favicon/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/img/favicon/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/img/favicon/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/img/favicon/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
+<link rel="manifest" href="/img/favicon/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/img/favicon/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
 
 <!-- Bootstrap -->
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -57,9 +70,9 @@
 <!-- Header -->
 <header class="text-center" id="home">
   <div class="intro-text">
-    <p><img src="img/logo.gif" /><br/>Dit jaar hebben we een nieuw feestje!</p>
+    <img src="img/logo.png" class="img-responsive center-block" /><p>Dit jaar hebben we een nieuw feestje!</p>
     <div class="clearfix"></div>
-    <a href="#about-section" class="btn btn-default btn-lg page-scroll">Meer weten...</a>
+    <a href="#about-section" class="btn btn-default btn-lg page-scroll" id="meerweten">Meer weten...</a>
   </div>
 </header>
 
@@ -70,29 +83,34 @@
       <h2>Over ne2000</h2>
       <hr>
       <p>Van 2000 tot en met 2005 is er ieder jaar een ne2000 georganiseerd. Het outdoor netwerk evenement heeft jaren lang veel mensen bij elkaar gebracht.</p>
-      <p>Dit jaar organiseren we een reunie.  Een gezellig weekendlang feestje met de sfeer van ne2000, en natuurlijk de oud-bezoekers van ne2000!</p>
+      <p>Dit jaar organiseren we een reünie. Een gezellig weekendlang feestje met de sfeer van ne2000, en natuurlijk de oud-bezoekers van ne2000!</p>
+      <p>De foto's van voorgaande jaren staan nog in ons <a href="https://gallery.ne2000.nl/" target="_new">&lt;fotoboek&gt;</a>.</p>
     </div>
     <div class="row">
       <div class="col-md-4">
         <h4>Wie?</h4>
         <p>Iedereen die ooit op ne2000 is geweest, plus één introducee.</p>
-        <p>Kinderen mogen mee, maar we zorgen niet voor vermaak of oppas.</p>
+        <p>We hebben lang niet van iedereen contactgegevens, dus roep het voort en wijs je oude ne2000 vrienden op dit event!</p>
       </div>
       <div class="col-md-4">
         <h4>Waar?</h4>
-        <p>Huize Ulenpas, Dubbeltjesweg 10, Hoog Keppel</p>
+        <p><a href="https://nl.wikipedia.org/wiki/Kasteel_Ulenpas">&lt;Huize Ulenpas&gt;</a>, Dubbeltjesweg 20, Hoog Keppel</p>
         <p>De Ulenpas is een landhuis met een grote gezellige tuin. Er is genoeg ruimte om lekker te chillen, eten en piano te spelen. Op de eerste verdieping en de grote zolder is plaats om je luchtbedje neer te leggen. Wil je echt het vakantiegevoel? Zet dan je tentje op in de grote tuin!</p>
       </div>
       <div class="col-md-4">
         <h4>Wanneer?</h4>
-        <p>2 tot en met 5 juni, 2017</p>
+        <p>2 tot en met 5 Juni, 2017</p>
         <p>Je bent welkom vanaf vrijdag vanaf een uur of 5 's middags. Het terrein en het huis moeten maandagochtend om 10 uur weer leeg en schoon zijn. Je bent welkom om het hele weekend met ons door te brengen, maar alleen een bezoekje overdag is natuurlijk ook leuk!</p>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
         <h4>Inschrijven?</h4>
-        <p>Inschrijven kan <a href="https://ne2k.typeform.com/to/DZEath">hier</a>.</p>
+<!--
+        <p>Helaas zijn er een beperkt aantal plekken. Als je graag wilt langs komen kun je <a href="https://ne2k.typeform.com/to/DZEath">&lt;hier&gt;</a> inschrijven. Op basis van inschrijvingen kijken we ook hoeveel we moeten inkopen.</p>
+-->
+        <p>Nog een klein moment, we maken een inschrijf-formulier...</p>
+        <p>Wil je anderen laten weten dat je komt? Deel het dan op <a href="https://faceboek.com/ne2000reünie/">&lt;facebook&gt;</a>!</p>
       </div>
     </div>
   </div>
@@ -106,7 +124,7 @@
       <hr>
     </div>
     <div class="row">
-            <div class="col-md-8">
+      <div class="col-md-8">
         <h4>Kan ik gratis komen feesten?</h4>
         <p>Bijna! Omdat we de locatie moeten huren en ook wat inkopen gaan doen vragen we een bijdrage in de kosten: 10 euro per overnachting, 10 euro voor diner en 3.50 voor ontbijt.</p>
       </div>
@@ -116,8 +134,7 @@
       </div>
       <div class="col-md-8">
         <h4>Mag ik zelf ook andere mensen uitnodigen?</h4>
-        <p>Als je nog andere oud-bezoekers kent mag je die zeker naar onze aanmeldpagina sturen! Helaas kunnen we lang niet iedereen zelf bereiken (niet alle email adressen van 10 jaar geleden werken nog) dus zegt het voort :)
-        </p>
+        <p>Als je nog andere oud-bezoekers kent mag je die zeker naar onze aanmeldpagina sturen! Helaas kunnen we lang niet iedereen zelf bereiken (niet alle email adressen van 10 jaar geleden werken nog) dus zegt het voort :)</p>
       </div>
       <div class="col-md-8">
         <h4>Mogen mijn kinderen ook mee?</h4>
@@ -144,12 +161,12 @@
         <p>We zullen 3 avonden en 3 ochtenden voor diner en ontbijt zorgen. Het diner zal iets zijn in de trant van broodje pulled pork en friet, barbecue, chinees of pizza. Het ontbijt zal erg uitgebreid zijn met warme broodjes, zoet en hartig beleg, koffie, thee, jus, melk, chocomel en een eitje. Verder zullen er snacks te koop zijn zoals gevulde koeken, mars, twix etc, appels en tosti’s.</p>
       </div>
        <div class="col-md-8">
-        <h4>Mag ik ook zelf voor mn eten zorgen?</h4>
+        <h4>Mag ik ook zelf voor m'n eten zorgen?</h4>
         <p>Ja dat mag. Er is een keuken met alles erop en eraan.</p>
       </div>
        <div class="col-md-8">
         <h4>Is er ook merchandise?</h4>
-        <p>Ja! Je kunt een Dopper bestellen met het ne2000 reunie logo. De doppers kosten 10 euro per stuk. De doppers kunnen alleen per 30 besteld worden, dus de deal gaat pas door bij voldoende bestellingen. Indien je al betaald hebt en de deal gaat niet door krijg je je geld terug.</p>
+        <p>Ja! Je kunt een Dopper bestellen met het ne2000 reünie logo. De doppers kosten 10 euro per stuk. De doppers kunnen alleen per 30 besteld worden, dus de deal gaat pas door bij voldoende bestellingen. Indien je al betaald hebt en de deal gaat niet door krijg je je geld terug.</p>
       </div>
        <div class="col-md-8">
         <h4>Wanneer moet ik betalen?</h4>
